--- a/src/components/Review.css
+++ b/src/components/Review.css
@@ -12,5 +12,5 @@
     line-height: 24px;
     text-transform: capitalize;
     letter-spacing: .5px;
-    
+    padding: 20px;
 }
